my first commit3

--- a/Question 2/Question2.ipynb
+++ b/Question 2/Question2.ipynb
@@ -102,7 +102,6 @@
    "source": [
     "# Building a function to connect to the Postgres database and create a table called data_set with name,age , country , city , zipcode , and state \n",
     "# it will also read the generated CSV file from the previous step and dump it into the data_set table.\n",
-    "# The Postgres Database changes the IP Randomly when the container is up , it usually reserve one of the below IPs , but sometimes it change it to 172.18.0.5 ,if the flow failed trying to access the postgres on once of those IPs , then you will need to change it in this script to point to the right IP.\n",
     "# This function will be called by a PythonOperator in the DAG"
    ]
   },
@@ -118,18 +117,12 @@
     "def load_into_postgres():\n",
     "\n",
     "\n",
-    "    try:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.4\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
-    "    except:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.6\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
+    "   connection = psycopg2.connect(user = \"airflow\",\n",
+    "                                password = \"airflow\",\n",
+    "                                host = \"postgres\",\n",
+    "                                port = \"5432\",\n",
+    "                                database = \"postgres\")\n",
+    "    \n",
     "    cursor = connection.cursor()\n",
     "\n",
     "\n",
@@ -196,18 +189,12 @@
    "outputs": [],
    "source": [
     "def extract_from_postgres_brazil():\n",
-    "    try:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.4\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
-    "    except:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.6\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
+    "    connection = psycopg2.connect(user = \"airflow\",\n",
+    "                                password = \"airflow\",\n",
+    "                                host = \"postgres\",\n",
+    "                                port = \"5432\",\n",
+    "                                database = \"postgres\")\n",
+    "    \n",
     "    cursor = connection.cursor()\n",
     "    sql = \"COPY (SELECT * FROM data_set WHERE country = 'Brazil') TO STDOUT WITH CSV HEADER \"\n",
     "    try:\n",
@@ -238,18 +225,12 @@
    "outputs": [],
    "source": [
     "def extract_from_postgres_canada():\n",
-    "    try:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.4\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
-    "    except:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.6\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
+    "    connection = psycopg2.connect(user = \"airflow\",\n",
+    "                                password = \"airflow\",\n",
+    "                                host = \"postgres\",\n",
+    "                                port = \"5432\",\n",
+    "                                database = \"postgres\")\n",
+    "    \n",
     "    cursor = connection.cursor()\n",
     "    sql = \"COPY (SELECT * FROM data_set WHERE country = 'Canada') TO STDOUT WITH CSV HEADER \"\n",
     "    try:\n",
@@ -279,18 +260,12 @@
    "outputs": [],
    "source": [
     "def extract_from_postgres_ghana():\n",
-    "    try:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.4\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
-    "    except:\n",
-    "        connection = psycopg2.connect(user = \"airflow\",\n",
-    "                                  password = \"airflow\",\n",
-    "                                  host = \"172.18.0.6\",\n",
-    "                                  port = \"5432\",\n",
-    "                                  database = \"postgres\")\n",
+    "    connection = psycopg2.connect(user = \"airflow\",\n",
+    "                                password = \"airflow\",\n",
+    "                                host = \"postgres\",\n",
+    "                                port = \"5432\",\n",
+    "                                database = \"postgres\")\n",
+    "    \n",
     "    cursor = connection.cursor()\n",
     "    sql = \"COPY (SELECT * FROM data_set WHERE country = 'Ghana') TO STDOUT WITH CSV HEADER \"\n",
     "    try:\n",
